; ModuleID = '/home/carl/AnghaBench/tengine/src/stream/extr_ngx_stream_return_module.c_ngx_stream_return_write_handler.c'
source_filename = "/home/carl/AnghaBench/tengine/src/stream/extr_ngx_stream_return_module.c_ngx_stream_return_write_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64, %struct.TYPE_11__* }
%struct.TYPE_11__ = type { i32, i32, i32* }
%struct.TYPE_9__ = type { i32* }

@NGX_ETIMEDOUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"connection timed out\00", align 1
@NGX_STREAM_OK = common dso_local global i32 0, align 4
@ngx_stream_return_module = common dso_local global i32 0, align 4
@NGX_ERROR = common dso_local global i64 0, align 8
@NGX_STREAM_INTERNAL_SERVER_ERROR = common dso_local global i32 0, align 4
@NGX_LOG_DEBUG_STREAM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"stream return done sending\00", align 1
@NGX_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*)* @ngx_stream_return_write_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_stream_return_write_handler(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %6 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %6, i32 0, i32 1
  %8 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  store %struct.TYPE_11__* %8, %struct.TYPE_11__** %3, align 8
  %9 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 2
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %4, align 8
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %1
  %17 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %18 = load i32, i32* @NGX_ETIMEDOUT, align 4
  %19 = call i32 @ngx_connection_error(%struct.TYPE_11__* %17, i32 %18, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* @NGX_STREAM_OK, align 4
  %22 = call i32 @ngx_stream_finalize_session(i32* %20, i32 %21)
  br label %66

23:                                               ; preds = %1
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* @ngx_stream_return_module, align 4
  %26 = call %struct.TYPE_9__* @ngx_stream_get_module_ctx(i32* %24, i32 %25)
  store %struct.TYPE_9__* %26, %struct.TYPE_9__** %5, align 8
  %27 = load i32*, i32** %4, align 8
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = call i64 @ngx_stream_top_filter(i32* %27, i32* %30, i32 1)
  %32 = load i64, i64* @NGX_ERROR, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %38

34:                                               ; preds = %23
  %35 = load i32*, i32** %4, align 8
  %36 = load i32, i32* @NGX_STREAM_INTERNAL_SERVER_ERROR, align 4
  %37 = call i32 @ngx_stream_finalize_session(i32* %35, i32 %36)
  br label %66

38:                                               ; preds = %23
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %39, i32 0, i32 0
  store i32* null, i32** %40, align 8
  %41 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %54, label %45

45:                                               ; preds = %38
  %46 = load i32, i32* @NGX_LOG_DEBUG_STREAM, align 4
  %47 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 8
  %50 = call i32 @ngx_log_debug0(i32 %46, i32 %49, i32 0, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %51 = load i32*, i32** %4, align 8
  %52 = load i32, i32* @NGX_STREAM_OK, align 4
  %53 = call i32 @ngx_stream_finalize_session(i32* %51, i32 %52)
  br label %66

54:                                               ; preds = %38
  %55 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %56 = call i64 @ngx_handle_write_event(%struct.TYPE_10__* %55, i32 0)
  %57 = load i64, i64* @NGX_OK, align 8
  %58 = icmp ne i64 %56, %57
  br i1 %58, label %59, label %63

59:                                               ; preds = %54
  %60 = load i32*, i32** %4, align 8
  %61 = load i32, i32* @NGX_STREAM_INTERNAL_SERVER_ERROR, align 4
  %62 = call i32 @ngx_stream_finalize_session(i32* %60, i32 %61)
  br label %66

63:                                               ; preds = %54
  %64 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %65 = call i32 @ngx_add_timer(%struct.TYPE_10__* %64, i32 5000)
  br label %66

66:                                               ; preds = %63, %59, %45, %34, %16
  ret void
}

declare dso_local i32 @ngx_connection_error(%struct.TYPE_11__*, i32, i8*) #1

declare dso_local i32 @ngx_stream_finalize_session(i32*, i32) #1

declare dso_local %struct.TYPE_9__* @ngx_stream_get_module_ctx(i32*, i32) #1

declare dso_local i64 @ngx_stream_top_filter(i32*, i32*, i32) #1

declare dso_local i32 @ngx_log_debug0(i32, i32, i32, i8*) #1

declare dso_local i64 @ngx_handle_write_event(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @ngx_add_timer(%struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
